# ejfat_proxy

./: .gitignore  BUILD_NOTES.md  BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Containerfile  LICENSE  LOCAL_TESTING.md  README.md  TEST_REPORT.md  grpc.old
.claude/skills/e2sar-build/: SKILL.md
config/: default.yaml  distributed.yaml.template  perlmutter.yaml.template  perlmutter_b2b.yaml.template
docs/: RECV_BOTTLENECK_ANALYSIS.md  TESTING.md  USER_GUIDE.md
docs/dev/: BUILD_NOTES.md  BUILD_STATUS.md  DISTRIBUTED_SCRIPTS.md  LINUX_DOCKER_TESTS_PLAN.md  event_lifecycle.md
docs/test/: RECV_BOTTLENECK_ANALYSIS.md  TESTING.md  TEST_REPORT.md  TEST_REPORT_MACOS.md
docs/user/: CONFIGURATION.md  CONFIG_UPDATE.md  DISTRIBUTED_PIPELINE.md  DOCKER_SCRIPTS.md  LOCAL_TESTING.md  PERLMUTTER_INTERACTIVE.md  PERLMUTTER_PIPELINE.md  PERLMUTTER_QUICKSTART.md  PIPELINE_GUIDE.md  README.md  TROUBLESHOOTING.md  USER_TESTING_GUIDE.md
grpc/: loadbalancer.grpc.pb.cc  loadbalancer.grpc.pb.h  loadbalancer.pb.cc  loadbalancer.pb.h
include/ejfat_zmq_proxy/: backpressure_monitor.hpp  config.hpp  event_ring_buffer.hpp  proxy.hpp  zmq_sender.hpp
scripts/: local_b2b_test.sh  local_pipeline_test.sh  pipeline_validator.py  plot_fill.py  setup_env.sh  test_receiver.py  test_sender.py
scripts/MacOS/: local_b2b_test.sh  local_common.sh  local_pipeline_test.sh  pipeline_sender.py  pipeline_validator.py  test_receiver.py
scripts/MacOS/distributed/: README.md  distributed_env.sh  run_pipeline.sh  ssh_common.sh  start_bridge.sh  start_proxy.sh  start_sender.sh  start_validator.sh  status.sh  stop_all.sh
scripts/docker/: b2b_generate_config.sh  container_runtime.sh  generate_config.sh  run_consumer.sh  run_pipeline_sender.sh  run_pipeline_validator.sh  run_proxy.sh  run_zmq_ejfat_bridge.sh
scripts/perlmutter/: README.md  b2b_backpressure_suite.sh  b2b_generate_config.sh  b2b_sender.sh  backpressure_suite.sh  backpressure_test.sh  bp_common.sh  bp_test1.sh  bp_test2.sh  bp_test3.sh  bp_test4.sh  bp_test5.sh  bp_test6.sh  generate_config.sh  minimal_sender.sh  perlmutter_backpressure_suite.sh  perlmutter_backpressure_test.sh  perlmutter_pipeline_test.sh  perlmutter_pipeline_test_4node.sh  perlmutter_proxy_test.sh  pipeline_test.sh  pipeline_test_4node.sh  proxy_coordinator.sh  proxy_test.sh  run_b2b_soak_sender.sh  run_consumer.sh  run_pipeline_sender.sh  run_pipeline_validator.sh  run_proxy.sh  run_soak_sender.sh  run_zmq_ejfat_bridge.sh  sender_common.sh  submit.sh
src/: CMakeLists.txt  backpressure_monitor.cpp  config.cpp  event_ring_buffer.cpp  proxy.cpp  zmq_sender.cpp
